--- a/html공유/sidebar.html
+++ b/html공유/sidebar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<meta charset="UTF-8">
 
 <head>
     <title>Sidebar</title>
@@ -50,10 +51,10 @@
                     <li class="item" id="account5">
                         <a href="#account5" class="btn"><i class="fas fa-sign-out-alt"></i>SISC</a>
                         <div class="subMenu">
-                            <a href="">  - 센터소개</a>
-                            <a href="">  - 장비이용</a>
-                            <a href="">  - 커뮤니케이션센터</a>
-                            <a href="">  - 성평등상담실</a>
+                            <a href=""> - 센터소개</a>
+                            <a href=""> - 장비이용</a>
+                            <a href=""> - 커뮤니케이션센터</a>
+                            <a href=""> - 성평등상담실</a>
                         </div>
                     </li>
                     <li class="item" id="account6">
